# serializer version: 1
# name: test_charging_parking_type
  list([
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.484090179656347,
          51.44487067822449,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.44487067822449,
          5.484090179656347,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.484090179656347,
              51.44487067822449,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 12010,
        'straat': 'Professor Dr Dorgelolaan',
        'type_en_merk': 'Parkeerplaats Electrisch opladen',
      }),
      spot_id='12010',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.487246232687543,
          51.42636980073094,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.42636980073094,
          5.487246232687543,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.487246232687543,
              51.42636980073094,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 13836,
        'straat': 'Biesterweg',
        'type_en_merk': 'Parkeerplaats Electrisch opladen',
      }),
      spot_id='13836',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.460958348459787,
          51.44543944946517,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.44543944946517,
          5.460958348459787,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.460958348459787,
              51.44543944946517,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 20912,
        'straat': 'Torenallee',
        'type_en_merk': 'Parkeerplaats Electrisch opladen',
      }),
      spot_id='20912',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.470738162332851,
          51.43767495234641,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.43767495234641,
          5.470738162332851,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.470738162332851,
              51.43767495234641,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 19547,
        'straat': 'Wilhelminaplein',
        'type_en_merk': 'Parkeerplaats Electrisch opladen',
      }),
      spot_id='19547',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.477724256533416,
          51.46912251620885,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.46912251620885,
          5.477724256533416,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.477724256533416,
              51.46912251620885,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 17492,
        'straat': 'Winkelcentrum Woensel',
        'type_en_merk': 'Parkeerplaats Electrisch opladen',
      }),
      spot_id='17492',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.469230608406298,
          51.44031968307088,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.44031968307088,
          5.469230608406298,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.469230608406298,
              51.44031968307088,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 14100,
        'straat': 'Ventoselaan',
        'type_en_merk': 'Parkeerplaats Electrisch opladen',
      }),
      spot_id='14100',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.482866882852026,
          51.42822819684571,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.42822819684571,
          5.482866882852026,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.482866882852026,
              51.42822819684571,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 13830,
        'straat': 'Dr Schaepmanlaan',
        'type_en_merk': 'Parkeerplaats Electrisch opladen',
      }),
      spot_id='13830',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.487240279474211,
          51.42634988692747,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.42634988692747,
          5.487240279474211,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.487240279474211,
              51.42634988692747,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 13837,
        'straat': 'Biesterweg',
        'type_en_merk': 'Parkeerplaats Electrisch opladen',
      }),
      spot_id='13837',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.483304267522476,
          51.440504884740086,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.440504884740086,
          5.483304267522476,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.483304267522476,
              51.440504884740086,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 18773,
        'straat': 'Tramstraat',
        'type_en_merk': 'Parkeerplaats Electrisch opladen',
      }),
      spot_id='18773',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.4751052452053335,
          51.434404968582726,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.434404968582726,
          5.4751052452053335,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.4751052452053335,
              51.434404968582726,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 21026,
        'straat': 'Deken van Somerenstraat',
        'type_en_merk': 'Parkeerplaats Electrisch opladen',
      }),
      spot_id='21026',
    ),
  ])
# ---
# name: test_crossed_out_parking_type
  list([
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.4720713352312655,
          51.464376413342755,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.464376413342755,
          5.4720713352312655,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.4720713352312655,
              51.464376413342755,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 11946,
        'straat': 'Michelangelolaan',
        'type_en_merk': 'Parkeerplaats Afgekruist',
      }),
      spot_id='11946',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.473547800531344,
          51.464411039709105,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.464411039709105,
          5.473547800531344,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.473547800531344,
              51.464411039709105,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 11933,
        'straat': 'Michelangelolaan',
        'type_en_merk': 'Parkeerplaats Afgekruist',
      }),
      spot_id='11933',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.485006013818546,
          51.430399977668955,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.430399977668955,
          5.485006013818546,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.485006013818546,
              51.430399977668955,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 13665,
        'straat': 'Bomanshof',
        'type_en_merk': 'Parkeerplaats Afgekruist',
      }),
      spot_id='13665',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.4713438738447415,
          51.43781205618678,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.43781205618678,
          5.4713438738447415,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.4713438738447415,
              51.43781205618678,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 18512,
        'straat': 'Wilhelminaplein',
        'type_en_merk': 'Parkeerplaats Afgekruist',
      }),
      spot_id='18512',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.4737975043994105,
          51.43348816472158,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.43348816472158,
          5.4737975043994105,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.4737975043994105,
              51.43348816472158,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 18820,
        'straat': 'Hof van Eden',
        'type_en_merk': 'Parkeerplaats Afgekruist',
      }),
      spot_id='18820',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.473617494361154,
          51.43337044799295,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.43337044799295,
          5.473617494361154,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.473617494361154,
              51.43337044799295,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 18821,
        'straat': 'Hof van Eden',
        'type_en_merk': 'Parkeerplaats Afgekruist',
      }),
      spot_id='18821',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.472066348597859,
          51.43301043342078,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.43301043342078,
          5.472066348597859,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.472066348597859,
              51.43301043342078,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 18682,
        'straat': 'Gestelsestraat',
        'type_en_merk': 'Parkeerplaats Afgekruist',
      }),
      spot_id='18682',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.482429392773308,
          51.44011918148758,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.44011918148758,
          5.482429392773308,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.482429392773308,
              51.44011918148758,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 16580,
        'straat': 'Raiffeisenstraat',
        'type_en_merk': 'Parkeerplaats Afgekruist',
      }),
      spot_id='16580',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.475708617669073,
          51.4375550012714,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.4375550012714,
          5.475708617669073,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.475708617669073,
              51.4375550012714,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 16841,
        'straat': 'Keizersgracht',
        'type_en_merk': 'Parkeerplaats Afgekruist',
      }),
      spot_id='16841',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.484752269463942,
          51.44435112864605,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.44435112864605,
          5.484752269463942,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.484752269463942,
              51.44435112864605,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 15115,
        'straat': 'Professor Dr Dorgelolaan',
        'type_en_merk': 'Parkeerplaats Afgekruist',
      }),
      spot_id='15115',
    ),
  ])
# ---
# name: test_disabled_parking_type
  list([
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.468028294136795,
          51.45196590072531,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.45196590072531,
          5.468028294136795,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.468028294136795,
              51.45196590072531,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 23428,
        'straat': 'Benedictusstraat',
        'type_en_merk': 'Parkeerplaats Gehandicapten',
      }),
      spot_id='23428',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.48576495981318,
          51.43258489086503,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.43258489086503,
          5.48576495981318,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.48576495981318,
              51.43258489086503,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 23188,
        'straat': 'Hertog Hendrik van Brabantplein',
        'type_en_merk': 'Parkeerplaats Gehandicapten',
      }),
      spot_id='23188',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.487336523369197,
          51.43359907711495,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.43359907711495,
          5.487336523369197,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.487336523369197,
              51.43359907711495,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 23049,
        'straat': 'Willem van Hornestraat',
        'type_en_merk': 'Parkeerplaats Gehandicapten',
      }),
      spot_id='23049',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.462657655831373,
          51.43588190541636,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.43588190541636,
          5.462657655831373,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.462657655831373,
              51.43588190541636,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 22868,
        'straat': 'Niet ingevuld',
        'type_en_merk': 'Parkeerplaats Gehandicapten',
      }),
      spot_id='22868',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.490066186569297,
          51.435898978883735,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.435898978883735,
          5.490066186569297,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.490066186569297,
              51.435898978883735,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 22772,
        'straat': 'Schellingstraat',
        'type_en_merk': 'Parkeerplaats Gehandicapten',
      }),
      spot_id='22772',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.477325002022769,
          51.4702825688508,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.4702825688508,
          5.477325002022769,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.477325002022769,
              51.4702825688508,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 12244,
        'straat': 'Winkelcentrum Woensel',
        'type_en_merk': 'Parkeerplaats Gehandicapten',
      }),
      spot_id='12244',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.455993108656147,
          51.441731672624805,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.441731672624805,
          5.455993108656147,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.455993108656147,
              51.441731672624805,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 12495,
        'straat': 'Frederiklaan',
        'type_en_merk': 'Parkeerplaats Gehandicapten',
      }),
      spot_id='12495',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.458827795256831,
          51.449891599152984,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.449891599152984,
          5.458827795256831,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.458827795256831,
              51.449891599152984,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 12891,
        'straat': 'Marconilaan',
        'type_en_merk': 'Parkeerplaats Gehandicapten',
      }),
      spot_id='12891',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.478167744280201,
          51.469735439493796,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.469735439493796,
          5.478167744280201,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.478167744280201,
              51.469735439493796,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 12338,
        'straat': 'Winkelcentrum Woensel',
        'type_en_merk': 'Parkeerplaats Gehandicapten',
      }),
      spot_id='12338',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.478165499071164,
          51.46969216987122,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.46969216987122,
          5.478165499071164,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.478165499071164,
              51.46969216987122,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 12339,
        'straat': 'Winkelcentrum Woensel',
        'type_en_merk': 'Parkeerplaats Gehandicapten',
      }),
      spot_id='12339',
    ),
  ])
# ---
# name: test_loading_parking_type
  list([
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.467566134606305,
          51.45214043811088,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.45214043811088,
          5.467566134606305,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.467566134606305,
              51.45214043811088,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 23420,
        'straat': 'Kronehoefstraat',
        'type_en_merk': 'Parkeerplaats laden/lossen',
      }),
      spot_id='23420',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.4719225803080604,
          51.433285852317034,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.433285852317034,
          5.4719225803080604,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.4719225803080604,
              51.433285852317034,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 18681,
        'straat': 'Gestelsestraat',
        'type_en_merk': 'Parkeerplaats laden/lossen',
      }),
      spot_id='18681',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.460093640557604,
          51.44565424830635,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.44565424830635,
          5.460093640557604,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.460093640557604,
              51.44565424830635,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 20914,
        'straat': 'Torenallee',
        'type_en_merk': 'Parkeerplaats laden/lossen',
      }),
      spot_id='20914',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.4744767226620015,
          51.43551302160987,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.43551302160987,
          5.4744767226620015,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.4744767226620015,
              51.43551302160987,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 20646,
        'straat': 'Grote Berg',
        'type_en_merk': 'Parkeerplaats laden/lossen',
      }),
      spot_id='20646',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.457403444276032,
          51.448258391184254,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.448258391184254,
          5.457403444276032,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.457403444276032,
              51.448258391184254,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 20706,
        'straat': 'Philitestraat',
        'type_en_merk': 'Parkeerplaats laden/lossen',
      }),
      spot_id='20706',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.468641608217367,
          51.43084001137937,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.43084001137937,
          5.468641608217367,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.468641608217367,
              51.43084001137937,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 14937,
        'straat': 'Hoogstraat',
        'type_en_merk': 'Parkeerplaats laden/lossen',
      }),
      spot_id='14937',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.46870937352264,
          51.43089252074345,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.43089252074345,
          5.46870937352264,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.46870937352264,
              51.43089252074345,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 14938,
        'straat': 'Hoogstraat',
        'type_en_merk': 'Parkeerplaats laden/lossen',
      }),
      spot_id='14938',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.45682286377073,
          51.44901986427776,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.44901986427776,
          5.45682286377073,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.45682286377073,
              51.44901986427776,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 23356,
        'straat': 'Philitestraat',
        'type_en_merk': 'Parkeerplaats laden/lossen',
      }),
      spot_id='23356',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.4674800825964756,
          51.45213619642506,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.45213619642506,
          5.4674800825964756,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.4674800825964756,
              51.45213619642506,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 23419,
        'straat': 'Kronehoefstraat',
        'type_en_merk': 'Parkeerplaats laden/lossen',
      }),
      spot_id='23419',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.4560555363217205,
          51.44165827018127,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.44165827018127,
          5.4560555363217205,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.4560555363217205,
              51.44165827018127,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 12496,
        'straat': 'Frederiklaan',
        'type_en_merk': 'Parkeerplaats laden/lossen',
      }),
      spot_id='12496',
    ),
  ])
# ---
# name: test_parking_model
  list([
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.474774482175889,
          51.42929171364541,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.42929171364541,
          5.474774482175889,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.474774482175889,
              51.42929171364541,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 23269,
        'straat': 'van Meursstraat',
        'type_en_merk': 'Parkeerplaats',
      }),
      spot_id='23269',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.474524450039031,
          51.429371401892176,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.429371401892176,
          5.474524450039031,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.474524450039031,
              51.429371401892176,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 23270,
        'straat': 'van Meursstraat',
        'type_en_merk': 'Parkeerplaats',
      }),
      spot_id='23270',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.474445274023191,
          51.42939752664452,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.42939752664452,
          5.474445274023191,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.474445274023191,
              51.42939752664452,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 23271,
        'straat': 'van Meursstraat',
        'type_en_merk': 'Parkeerplaats',
      }),
      spot_id='23271',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.474384856563808,
          51.429421031474355,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.429421031474355,
          5.474384856563808,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.474384856563808,
              51.429421031474355,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 23272,
        'straat': 'van Meursstraat',
        'type_en_merk': 'Parkeerplaats',
      }),
      spot_id='23272',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.474132684425932,
          51.42947335084988,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.42947335084988,
          5.474132684425932,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.474132684425932,
              51.42947335084988,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 23273,
        'straat': 'van Meursstraat',
        'type_en_merk': 'Parkeerplaats',
      }),
      spot_id='23273',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.473815957374367,
          51.42956612005954,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.42956612005954,
          5.473815957374367,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.473815957374367,
              51.42956612005954,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 23277,
        'straat': 'van Meursstraat',
        'type_en_merk': 'Parkeerplaats',
      }),
      spot_id='23277',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.473961684033574,
          51.42945262650903,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.42945262650903,
          5.473961684033574,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.473961684033574,
              51.42945262650903,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 23279,
        'straat': 'van Meursstraat',
        'type_en_merk': 'Parkeerplaats',
      }),
      spot_id='23279',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.476749582530006,
          51.43162431647239,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.43162431647239,
          5.476749582530006,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.476749582530006,
              51.43162431647239,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 23351,
        'straat': 'Potgieterstraat',
        'type_en_merk': 'Parkeerplaats',
      }),
      spot_id='23351',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.477159477246228,
          51.43161227016372,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.43161227016372,
          5.477159477246228,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.477159477246228,
              51.43161227016372,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 23353,
        'straat': 'Edenstraat',
        'type_en_merk': 'Parkeerplaats',
      }),
      spot_id='23353',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.4665329757278425,
          51.4521057145467,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.4521057145467,
          5.4665329757278425,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.4665329757278425,
              51.4521057145467,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 23360,
        'straat': 'Kronehoefstraat',
        'type_en_merk': 'Parkeerplaats',
      }),
      spot_id='23360',
    ),
  ])
# ---
# name: test_parking_model.1
  51.42929171364541
# ---
# name: test_parking_model.2
  5.474774482175889
# ---
# name: test_permit_parking_type
  list([
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.471875282928675,
          51.464370174138594,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.464370174138594,
          5.471875282928675,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.471875282928675,
              51.464370174138594,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 11952,
        'straat': 'Michelangelolaan',
        'type_en_merk': 'Parkeerplaats Vergunning',
      }),
      spot_id='11952',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.473749976284599,
          51.464413442384526,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.464413442384526,
          5.473749976284599,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.473749976284599,
              51.464413442384526,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 11931,
        'straat': 'Michelangelolaan',
        'type_en_merk': 'Parkeerplaats Vergunning',
      }),
      spot_id='11931',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.47285347272649,
          51.464393692077614,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.464393692077614,
          5.47285347272649,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.47285347272649,
              51.464393692077614,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 11937,
        'straat': 'Michelangelolaan',
        'type_en_merk': 'Parkeerplaats Vergunning',
      }),
      spot_id='11937',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.473425270901313,
          51.46440602495267,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.46440602495267,
          5.473425270901313,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.473425270901313,
              51.46440602495267,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 11943,
        'straat': 'Michelangelolaan',
        'type_en_merk': 'Parkeerplaats Vergunning',
      }),
      spot_id='11943',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.472373282328308,
          51.437230597768846,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.437230597768846,
          5.472373282328308,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.472373282328308,
              51.437230597768846,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 17991,
        'straat': 'Smitsstraat',
        'type_en_merk': 'Parkeerplaats Vergunning',
      }),
      spot_id='17991',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.472178714735089,
          51.43736962937751,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.43736962937751,
          5.472178714735089,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.472178714735089,
              51.43736962937751,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 17992,
        'straat': 'Smitsstraat',
        'type_en_merk': 'Parkeerplaats Vergunning',
      }),
      spot_id='17992',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.472111818477869,
          51.43740963285452,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.43740963285452,
          5.472111818477869,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.472111818477869,
              51.43740963285452,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 17993,
        'straat': 'Smitsstraat',
        'type_en_merk': 'Parkeerplaats Vergunning',
      }),
      spot_id='17993',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.471953747608381,
          51.437531514929795,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.437531514929795,
          5.471953747608381,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.471953747608381,
              51.437531514929795,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 17996,
        'straat': 'Smitsstraat',
        'type_en_merk': 'Parkeerplaats Vergunning',
      }),
      spot_id='17996',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.471850213455201,
          51.43751446685524,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.43751446685524,
          5.471850213455201,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.471850213455201,
              51.43751446685524,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 17997,
        'straat': 'Smitsstraat',
        'type_en_merk': 'Parkeerplaats Vergunning',
      }),
      spot_id='17997',
    ),
    ParkingSpot(
      geometry=dict({
        'coordinates': list([
          5.471832131954089,
          51.437613415634196,
        ]),
        'type': 'Point',
      }),
      source_attributes=dict({
        'aantal': 1.0,
        'geo_point_2d': list([
          51.437613415634196,
          5.471832131954089,
        ]),
        'geo_shape': dict({
          'geometry': dict({
            'coordinates': list([
              5.471832131954089,
              51.437613415634196,
            ]),
            'type': 'Point',
          }),
          'properties': dict({
          }),
          'type': 'Feature',
        }),
        'objectid': 17999,
        'straat': 'Smitsstraat',
        'type_en_merk': 'Parkeerplaats Vergunning',
      }),
      spot_id='17999',
    ),
  ])
# ---
